--- a/style.css
+++ b/style.css
@@ -331,6 +331,7 @@ footer {
   @media (max-width: 768px) {
     .hamburger {
       display: block;
+      color: black;
     }
   
     .nav-links {
