--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ header {
     font-size: 4rem;
     font-weight: 700;
     margin-bottom: 15px;
+    font-family: 'Segoe UI', sans-serif;
 }
 
 .hero p {
@@ -141,7 +142,7 @@ footer {
 
 .logo {
   display: inline-block;
-  height: 80px; /* Adjust as needed */
+  height: 70px; /* Adjust as needed */
 }
 
 .logo img {
@@ -254,7 +255,7 @@ footer {
 
 .stats-section {
     background-color: #FAFAF7;
-    padding: 30px 10px;
+    padding: 15px 10px;
     text-align: center;
   }
   
@@ -300,8 +301,6 @@ footer {
   }
 }
   
-
-
 .scroll-section {
   padding: 20px 0;
   background-color: #F4EDE5;
@@ -322,17 +321,17 @@ footer {
 
 .ticker-text {
   display: inline-block;
-  font-size: 3rem;
+  font-size: 2rem;
   color: #333;
 }
 
 @media (max-width: 768px) {
   .scroll-section {
-    padding: 15px 0;
+    padding: 10px 0;
   }
 
   .ticker-text {
-    font-size: 2.3rem;
+    font-size: 1.5rem;
     color: #333;
   }
 }
@@ -596,7 +595,7 @@ nav ul li {
 }
 
 .fan-favourites h2 {
-  padding-top: 30px;
+  padding-top: 20px;
   font-size: 2.5rem;
   margin-bottom: 20px;
   color: #333;
